# plusultra

./: .gitignore  App.tsx  DESKTOP_SETUP.md  QA.md  README.md  TAURI_SETUP.md  WRAPPED_SETUP_GUIDE.md  api.md  bop.json  export_supabase_data.sql  index.css  index.html  index.tsx  metadata.json  neon_complete_schema.sql  netlify.toml  package-lock.json  package.json  tmdb.json  tsconfig.json  types.ts  vite-env.d.ts  vite.config.ts  vitest.config.ts
components/: ActivityPage.tsx  AddToPlaylistModal.tsx  AdminDashboard.tsx  AiAssistant.tsx  AnimePage.tsx  AnnouncementsPage.tsx  AsianDramaPage.tsx  AttributionTag.tsx  AuthPage.tsx  CategoryRow.tsx  CollaborationStats.tsx  CollaboratorsList.tsx  ContinueWatchingCard.tsx  CuratorLabPage.tsx  DirectMediaPlayer.tsx  DownloadQuestPage.tsx  ErrorBoundary.tsx  Footer.tsx  ForYouPage.tsx  GuestAccessAdminPanel.tsx  GuestAccessPage.tsx  GuestExpiredPage.tsx  GuestSecurityCard.tsx  Hero.tsx  InviteCollaboratorModal.tsx  LatestPage.tsx  LatestTrailerCard.tsx  LatestTrailersByCountrySection.tsx  LikedPlaylistsPage.tsx  MessagesPage.tsx  MobileActivityPage.tsx  MobileAddToPlaylistModal.tsx  MobileAdminDashboard.tsx  MobileAnnouncementsPage.tsx  MobileConfirmModal.tsx  MobileHero.tsx  MobileHome.tsx  MobileMenu.tsx  MobileNavbar.tsx  MobileNewsPage.tsx  (+36 more)
docs/: curator-lab-design.md
electron/: dev-runner.mjs  main.mjs  preload.mjs
hooks/: useActivityFeed.ts  useMyList.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: downloads.rs  lib.rs  main.rs  media_capture.rs  shield.rs
(+227 files in other folders)
