[package]
name = "plusultra-tauri"
version = "1.0.46"
description = "Plus Ultra Tauri app"
authors = ["amxcodes"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "plusultra_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
